케이스 추가